# tristan-mp-v2

./: .gitignore  CITATION  CMakeLists.txt  LICENSE  Makefile.in  README.md  configure.py  dev-requirements.txt  fulltest.py  isolde.py
docker/: Dockerfile  docker-compose.yml
inputs/: 2d_rec.cfg  full.cfg  input.1dtwostream  input.2d_2per_rec  input.2d_Waterbag  input.2d_prtlwake  input.2d_rec  input.Eosc.langmuir  input.bin_psr  input.bwpp  input.dummy  input.full  input.jones  input.kompaneets  input.langmuir  input.psr  input.rad  input.rad_shock  input.svensson  input.turb  input.twobulbs  input.unitbw  langmuir.cfg  psr.cfg  qed.cfg  rad_shock.cfg  rad_turb.cfg  twostream.cfg
src/: CMakeLists.txt  defs.F90  fields.F90  global_namespace.F90  output_namespace.F90  qed_namespace.F90  tristan.F90  tristanmainloop.F90
src/algorithms/: current_deposit.F90  field_solver.F90  filtering.F90  particle_mover.F90  position_update.F  position_update.F08  zigzag_deposit.F  zigzag_deposit.F08
src/algorithms/boris/: boris_push.F08
src/algorithms/fieldsolvers/: absorb_ampere.F08  absorb_faraday.F08  blinne_faraday.F08  default_faraday.F08
src/algorithms/gca/: gca_ecrossb_drift.F  gca_routine.F
src/algorithms/vay/: vay_push.F08  vay_push.F90
src/communications/: exchange_array.F90  exchange_currents.F90  exchange_fields.F90  exchange_particles.F90
src/domain/: adaptive_lb.F90  domain.F90  loadbalancing.F90  static_lb.F90
src/fields/: field_logistics.F90  fields.F90
src/io/: output_logistics.F90  read_input.F90  write_diagnostics.F90  write_helpers.F90  write_history.F90  write_output.F90  write_params.F90  write_restart.F90  write_slice.F90  write_spectra.F90  write_tot.F90  write_tot_flds.F90  write_tot_prtl.F90  write_usroutput.F90
src/load_balancing/: loadbalancing.F90  static_lb.F90
src/logistics/: binary_coupling.F90  exchange_array.F90  exchange_currents.F90  exchange_fields.F90  exchange_particles.F90  finalize.F90  initialize.F90  particle_downsampling.F90  particle_logistics.F90
src/main/: finalize.F90  initialize.F90  testsite.F90  tristan.F90  tristanmainloop.F90
src/objects/: domain.F90  fields.F90  particles.F90
src/particles/: binary_coupling.F90  particle_binning.F90  particle_downsampling.F90  particle_logistics.F90  particles.F90  powerlaw_plasma.F90  thermal_plasma.F90
src/physics/: bw_pp.F90  compton.F90  powerlaw_plasma.F90  qed_physics.F90  radiation.F90  thermal_plasma.F90
src/qed/: annihilation.F90  compton.F90  radiation.F90
src/restart/: restart.F90
src/tools/: auxiliary.F90  binary_coupling.F90  error_handling.F90  helpers.F90  interp_bfield.F  interp_bfield.F08  interp_efield.F  interp_efield.F08  mom_binning.F90
tristanVis/: alg.py  aux.py  interactive.py  isolde.py  relativity.py  snippets.py  tmath.py  tristanVis.py
tristanVis/legacy/: backup.py  legacy_1.py
tristanVis/legacy/setups/: tristanPsr.py
unit/: unit_alb.F90  unit_antenna.F90  unit_bincoupling.F90  unit_bw.F90  unit_chargedmerging.F90  unit_compton.F90  unit_compton_drag.F90  unit_cooling.F90  unit_dipole.F90  unit_dwn.F90  unit_filtering.F90  unit_gca.F90  unit_gyration.F90  unit_qed.F90  unit_rec.F90  unit_slb.F90  unit_spec.F90  unit_two_bulbs.F90  unit_weight.F90
user/: LICENSE  README.md  configure.py  fulltest.py  user_1d_antenna_shock.F90  user_1d_discharge.F90  user_2d_2per_rec.F90  user_2d_Waterbag.F90  user_2d_boostedrec.F90  user_2d_prtlwake.F90  user_2d_rec.F90  user_2d_rec_compton.F90  user_2d_rec_open.F90  user_3d_rec.F90  user_E_osc_load_1d_nodens.F90  user_bin_psr.F90  user_bwpp.F90  user_cooling.F90  user_dummy.F90  user_emwave.F90  user_esc_turb.F90  user_full.F90  user_inject_and_cool.F90  user_isolatedparticles.F90  user_jones.F90  user_kink.F90  user_kompaneets.F90  user_langmuir.F90  user_prtlwake.F90  user_psr.F90  user_psr_simple.F90  user_rad_shock.F90  user_rad_turb.F90  user_rec.F90  user_rec_compton.F90  user_reflect.F90  user_sheet.F90  user_svensson.F90  user_turb.F90  user_two_bulbs.F90  (+2 more)
user/inputs/: input.twostream  input.weibel
user/old/: user_rec_compton2.F90  user_rec_compton3.F90  user_rec_compton4.F90
user/src/: global_namespace.F90
user/src/algorithms/: current_deposit.F90  filtering.F90  momentum_update.F08  particle_mover.F90  zigzag_deposit.F08
user/src/algorithms/fieldsolvers/: default_ampere.F08
user/src/communications/: exchange_array.F90  exchange_fields.F90  exchange_particles.F90
user/src/domain/: domain.F90  loadbalancing.F90  static_lb.F90
user/src/fields/: field_logistics.F90
user/src/io/: output_logistics.F90  read_input.F90  write_history.F90  write_params.F90  write_tot.F90
user/src/main/: initialize.F90
user/src/particles/: particle_logistics.F90  particles.F90  thermal_plasma.F90
user/src/qed/: bw_pp.F90  qed.F90
user/src/restart/: restart.F90
user/src/tools/: error_handling.F90  helpers.F90  interp_efield.F08
user/tristanVis/: algorithms.py  isolde.py
user/tristanVis/legacy/setups/: tristanLoop.py
user/unit/: optional.F  unit_alb.F90  unit_chargedmerging.F90  unit_cooling.F90  unit_dwn.F90  unit_gca.F90  unit_qed.F90  unit_spec.F90
